<resources>
    <string name="app_name">优旅</string>
    <string name="app_name1">优旅</string>
    <string name="shouye">首页</string>
    <string name="shequ">店主</string>
    <string name="wode">我的</string>
    <string name="exit">再按一次退出客户端</string>
    <string name="zhuce">注册</string>
    <string name="welcomeigou">欢迎使用“众惠赢”平台</string>
    <string name="hint_yaoqingma">请输入邀请码（可扫码获取）</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_yanzhengma">请输入验证码</string>
    <string name="hint_mima">请输入密码（至少6位）</string>
    <string name="hint_mima2">请再次确认密码</string>
    <string name="hint_mima1">请输入密码</string>
    <string name="setting_qingchu">清除</string>
    <string name="my_tixianjilu">提现记录</string>
    <string name="empty_search">请输入关键字查找</string>
    <string name="pinduoduo_scheme">pinduoduo</string>
    <string name="pinduoduo_host">com.xunmeng.pinduoduo</string>
    <string name="order_tabbar_pinduoduo_all">全部</string>
    <string name="order_tabbar_pinduoduo_waiting">待返佣</string>
    <string name="order_tabbar_pinduoduo_account">已完成</string>
    <string name="order_tabbar_pinduoduo_expired">已结算</string>
    <string name="news_tab1">系统消息</string>
    <string name="news_tab2">个人消息</string>
    <string name="please_waiting">敬请期待</string>
    <string name="no_data">没有更多数据了</string>
    <string name="renzheng_successful">认证信息已提交</string>
    <string name="my_shouyi_title">预估收益</string>
    <string name="taobao">淘宝</string>
    <string name="tianmao">天猫</string>
    <string name="jingdong">京东</string>
    <string name="pinduoduo">拼多多</string>
    <string name="fanli_text">省</string>
    <string name="yugusheng">省</string>
    <string name="yaoqingzhuan">邀请赚</string>
    <string name="wxhy">微信好友</string>
    <string name="wxpyq">朋友圈</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="data_error">数据异常</string>
    <string name="share_zhuan">赚</string>
    <string name="keyword_1">品牌男装</string>
    <string name="keyword_2">个护美妆</string>
    <string name="keyword_3">鞋袜箱包</string>
    <string name="keyword_4">配饰精品</string>
    <string name="keyword_5">家装家具</string>
    <string name="keyword_6">眼镜墨镜</string>
    <string name="keyword_7">帽子丝巾</string>
    <string name="keyword_8">皮带腰带</string>
    <string name="keyword_9">品牌手表</string>
    <string name="keyword_10">潮流女装</string>
    <string name="keyword_11">上衣</string>
    <string name="keyword_12">裤装</string>
    <string name="keyword_13">儿童母婴</string>
    <string name="keyword_14">汽车汽修</string>
    <string name="shouxufei_1">手续费1%</string>
    <string name="shouxufei_7">手续费0.8%</string>
    <string name="goods">商品</string>
    <string name="edit_addr_title">编辑收货地址</string>
    <string name="edit_addr_shouhuoren">收货人不能为空</string>
    <string name="edit_addr_mobile">联系电话不能为空</string>
    <string name="edit_addr_area">请选择您所在的区域</string>
    <string name="edit_addr_addr">请填写收货地址</string>
    <string name="select_addr_title">选择地址</string>
    <string name="add_addr_title">添加地址</string>
    <string name="order_sure_title">订单确认</string>
    <string name="my_bankcark_title">我的卡包</string>
    <string name="my_edit_bankcark_title">编辑我的银行卡</string>
    <string name="edit_bankcark_cardnum">开户卡号不能为空</string>
    <string name="edit_bankcark_bank">开户银行不能为空</string>
    <string name="edit_bankcark_addr">开户行地址不能为空</string>
    <string name="edit_bankcark_loginpwd">登陆密码不能为空</string>
    <string name="add_bankcark_title">新增银行卡</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_order_title">订单支付</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_main_title">我的订单</string>
    <string name="login_user_xieyi_title">用户协议</string>
    <string name="dz_no_goods_change">暂无商品可切换</string>
    <string name="dz_please_buy">"尚未激活，请先购买商品"</string>
    <string name="lijikaitong">立即激活</string>
    <string name="lijiyaoqing">立即邀请</string>
    <string name="yuemingxi">余额明细</string>
    <string name="tixianjilu">提现记录</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="kefuzhongxin">客服中心</string>

</resources>
