<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/zhuce"
            android:textColor="@color/text_color_black"
            android:textSize="30sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:text="@string/welcomeigou"
            android:textColor="@color/text_color_gray"
            android:textSize="14sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_yaoqingma"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/text_color_blue"
                        android:drawableLeft="@mipmap/login_saoma"
                        android:drawablePadding="8dp"
                        android:textSize="14sp"
                        android:hint="@string/hint_yaoqingma" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_yaoqingma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@mipmap/saoma" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/text_color_blue"
                    android:drawableLeft="@mipmap/login_phone"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_phone"
                    android:textSize="14sp"
                    android:inputType="phone"
                    android:maxLength="11" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_yanzhengma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_blue"
                        android:drawableLeft="@mipmap/yanzhengma"
                        android:drawablePadding="8dp"
                        android:textSize="14sp"
                        android:hint="@string/hint_yanzhengma" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_yanzhengma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="获取验证码"
                    android:textSize="14sp"
                    android:textColor="#2295F6"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mima"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_blue"
                        android:drawableLeft="@mipmap/login_mima"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_mima"
                        android:textSize="14sp"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_biyan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@mipmap/biyan" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mima1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_blue"
                        android:drawableLeft="@mipmap/login_mima"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_mima2"
                        android:textSize="14sp"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_biyan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@mipmap/biyan" />

            </RelativeLayout>

        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_zhuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/zhuce"
            android:textSize="14sp"
            android:textColor="@color/text_color_whitefff"
            android:background="@drawable/haixiangbtnbg" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:src="@mipmap/back000" />

</RelativeLayout>