<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/delegate_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <include layout="@layout/part_toolbar" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rv_mima_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_mima_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="密码登录"
                android:textColor="@color/text_color_blue"
                android:textSize="16sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/text_color_blue" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_yanzhengme_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_yanzhengma_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="验证码登录"
                android:textColor="@color/text_color_black"
                android:textSize="16sp" />

            <View
                android:id="@+id/line2"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/text_color_blue"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/text_color_blue"
                    android:drawableLeft="@mipmap/login_phone"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_yanzhengma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/text_color_blue"
                    android:drawableLeft="@mipmap/yanzhengma"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_yanzhengma"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_yanzhengma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:text="获取验证码"
                android:textColor="#2295F6"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_mima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/text_color_blue"
                    android:drawableLeft="@mipmap/login_mima"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_mima1"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_biyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@mipmap/biyan" />
        </RelativeLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_zhuce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="用户注册"
                android:textColor="@color/text_color_gray" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="忘记密码？"
                android:textColor="@color/text_color_gray" />

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="登录"
        android:textColor="@color/text_color_whitefff"
        android:background="@drawable/haixiangbtnbg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读并同意"
            android:textColor="#666"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户服务协议》"
            android:textColor="@color/text_color_blue"
            android:textSize="12sp" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>